# open-webui-openai-compatible

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  tui.py
.github/workflows/: ci.yml
docs/: architecture.dot
src/: __init__.py  client.py  main.py  models.py  settings.py  translator.py
tests/: conftest.py  test_app.py  test_translator.py
tests/integration/: conftest.py  test_e2e.py  test_openai_sdk.py  test_orchestrator_tool_calls.py  test_parallel_tool_calls.py
