[project]
name = "open-webui-openai-proxy"
version = "0.1.0"
description = "FastAPI proxy translating OpenAI-compatible API to Open WebUI"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "openai>=1.0.0",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "textual",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "openai",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
